--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 01:24:00 PM</p>
+    <p class="lastupdate">09/13/2020 01:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">87.6&#176;F</td>
+        <td class="data">88.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">87.6&#176;F</td>
+        <td class="data">88.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">87.6&#176;F</td>
+        <td class="data">88.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.0&#176;F</td>
+        <td class="data">44.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.857 inHg (-0.070)</td>
+        <td class="data">29.857 inHg (-0.065)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NNW (338&#176;)</td>
+        <td class="data">2 mph ENE (68&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:23:30 PM">
-            87.6</span><br/>
+          <span title="01:28:06 PM">
+            88.5</span><br/>
           <span title="07:29:11 AM">
             48.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:23:30 PM (Sunday)">
-            87.6</span><br/>
+          <span title="01:28:06 PM (Sunday)">
+            88.5</span><br/>
           <span title="07:29:11 AM (Sunday)">
             48.7</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:23:30 PM" class="hival">
-            87.6</span>
+          <span title="01:28:06 PM" class="hival">
+            88.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:23:30 PM (Sunday)" class="hival">
-            87.6</span>
+          <span title="01:28:06 PM (Sunday)" class="hival">
+            88.5</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -271,14 +271,14 @@
         <td class="data new_row hilo_day">
           <span title="07:09:59 AM">
             74</span><br/>
-          <span title="01:10:28 PM">
-            22</span>
+          <span title="01:27:32 PM">
+            21</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:09:59 AM (Sunday)">
             74</span><br/>
-          <span title="01:10:28 PM (Sunday)">
-            22</span>
+          <span title="01:27:32 PM (Sunday)">
+            21</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
@@ -407,9 +407,9 @@
       <tr>
         <td class="label">Wind Average</td>
         <td class="data new_row hilo_day">
-          0</td>
+          1</td>
         <td class="data new_row hilo_week">
-          0</td>
+          1</td>
         <td class="data new_row hilo_month">
           2</td>
         <td class="data new_row hilo_year">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          162
+          161
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          162
+          161
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 22 hours, 37 minutes</td>
+      <td class="data">11 days, 22 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 22 hours, 37 minutes</td>
+      <td class="data">11 days, 22 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
