--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 01:29:00 PM</p>
+    <p class="lastupdate">09/13/2020 01:34:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">88.5&#176;F</td>
+        <td class="data">89.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">88.5&#176;F</td>
+        <td class="data">89.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">88.5&#176;F</td>
+        <td class="data">89.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.8&#176;F</td>
+        <td class="data">44.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">22%</td>
+        <td class="data">21%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.857 inHg (-0.065)</td>
+        <td class="data">29.857 inHg (-0.063)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph ENE (68&#176;)</td>
+        <td class="data">1 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.8&#176;F</td>
+        <td class="data">74.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:28:06 PM">
-            88.5</span><br/>
+          <span title="01:32:22 PM">
+            89.0</span><br/>
           <span title="07:29:11 AM">
             48.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:28:06 PM (Sunday)">
-            88.5</span><br/>
+          <span title="01:32:22 PM (Sunday)">
+            89.0</span><br/>
           <span title="07:29:11 AM (Sunday)">
             48.7</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:28:06 PM" class="hival">
-            88.5</span>
+          <span title="01:32:22 PM" class="hival">
+            89.0</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:28:06 PM (Sunday)" class="hival">
-            88.5</span>
+          <span title="01:32:22 PM (Sunday)" class="hival">
+            89.0</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="09:49:01 AM">
             29.930</span><br/>
-          <span title="01:20:02 PM">
-            29.856</span>
+          <span title="01:30:02 PM">
+            29.853</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:49:01 AM (Sunday)">
             29.930</span><br/>
-          <span title="01:20:02 PM (Sunday)">
-            29.856</span>
+          <span title="01:30:02 PM (Sunday)">
+            29.853</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          161
+          160
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          161
+          160
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:23:02 PM">
-            74.8</span><br/>
+          <span title="01:29:02 PM">
+            74.9</span><br/>
           <span title="07:26:01 AM">
             71.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:23:02 PM (Sunday)">
-            74.8</span><br/>
+          <span title="01:29:02 PM (Sunday)">
+            74.9</span><br/>
           <span title="07:26:01 AM (Sunday)">
             71.6</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 22 hours, 42 minutes</td>
+      <td class="data">11 days, 22 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 22 hours, 42 minutes</td>
+      <td class="data">11 days, 22 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
