--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 01:34:00 PM</p>
+    <p class="lastupdate">09/13/2020 01:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">89.0&#176;F</td>
+        <td class="data">89.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">89.0&#176;F</td>
+        <td class="data">89.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">89.0&#176;F</td>
+        <td class="data">89.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.0&#176;F</td>
+        <td class="data">45.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">21%</td>
+        <td class="data">22%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.857 inHg (-0.063)</td>
+        <td class="data">29.853 inHg (-0.065)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NNE (22&#176;)</td>
+        <td class="data">2 mph ENE (68&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">74.9&#176;F</td>
+        <td class="data">75.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:32:22 PM">
-            89.0</span><br/>
+          <span title="01:38:32 PM">
+            89.4</span><br/>
           <span title="07:29:11 AM">
             48.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:32:22 PM (Sunday)">
-            89.0</span><br/>
+          <span title="01:38:32 PM (Sunday)">
+            89.4</span><br/>
           <span title="07:29:11 AM (Sunday)">
             48.7</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:32:22 PM" class="hival">
-            89.0</span>
+          <span title="01:38:32 PM" class="hival">
+            89.4</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:32:22 PM (Sunday)" class="hival">
-            89.0</span>
+          <span title="01:38:32 PM (Sunday)" class="hival">
+            89.4</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -235,14 +235,14 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="12:41:27 PM">
-            45.1</span><br/>
+          <span title="01:38:40 PM">
+            45.5</span><br/>
           <span title="07:29:11 AM">
             37.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="12:41:27 PM (Sunday)">
-            45.1</span><br/>
+          <span title="01:38:40 PM (Sunday)">
+            45.5</span><br/>
           <span title="07:29:11 AM (Sunday)">
             37.9</span>
         </td>
@@ -440,15 +440,15 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          160
+          157
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          160
+          157
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          296
+          297
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:29:02 PM">
-            74.9</span><br/>
+          <span title="01:37:02 PM">
+            75.0</span><br/>
           <span title="07:26:01 AM">
             71.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:29:02 PM (Sunday)">
-            74.9</span><br/>
+          <span title="01:37:02 PM (Sunday)">
+            75.0</span><br/>
           <span title="07:26:01 AM (Sunday)">
             71.6</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 22 hours, 47 minutes</td>
+      <td class="data">11 days, 22 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 22 hours, 47 minutes</td>
+      <td class="data">11 days, 22 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
