--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 01:44:00 PM</p>
+    <p class="lastupdate">09/13/2020 01:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">89.8&#176;F</td>
+        <td class="data">89.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">89.8&#176;F</td>
+        <td class="data">89.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">89.8&#176;F</td>
+        <td class="data">89.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.6&#176;F</td>
+        <td class="data">44.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.852 inHg (-0.064)</td>
+        <td class="data">29.848 inHg (-0.065)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph S (180&#176;)</td>
+        <td class="data">4 mph SSE (158&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.0&#176;F</td>
+        <td class="data">75.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:42:38 PM">
-            89.8</span><br/>
+          <span title="01:45:32 PM">
+            89.9</span><br/>
           <span title="07:29:11 AM">
             48.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:42:38 PM (Sunday)">
-            89.8</span><br/>
+          <span title="01:45:32 PM (Sunday)">
+            89.9</span><br/>
           <span title="07:29:11 AM (Sunday)">
             48.7</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:42:38 PM" class="hival">
-            89.8</span>
+          <span title="01:45:32 PM" class="hival">
+            89.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:42:38 PM (Sunday)" class="hival">
-            89.8</span>
+          <span title="01:45:32 PM (Sunday)" class="hival">
+            89.9</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="09:49:01 AM">
             29.930</span><br/>
-          <span title="01:40:02 PM">
-            29.851</span>
+          <span title="01:48:02 PM">
+            29.848</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:49:01 AM (Sunday)">
             29.930</span><br/>
-          <span title="01:40:02 PM (Sunday)">
-            29.851</span>
+          <span title="01:48:02 PM (Sunday)">
+            29.848</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -375,14 +375,14 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="01:41:54 PM">
-            6</span><br/>
-          93
+          <span title="01:48:08 PM">
+            8</span><br/>
+          208
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:41:54 PM (Sunday)">
-            6</span><br/>
-          93
+          <span title="01:48:08 PM (Sunday)">
+            8</span><br/>
+          208
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 04:18:20 PM">
@@ -440,15 +440,15 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          154
+          157
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          154
+          157
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          297
+          296
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 22 hours, 57 minutes</td>
+      <td class="data">11 days, 23 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 22 hours, 57 minutes</td>
+      <td class="data">11 days, 23 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
