--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/13/2020 01:49:00 PM</p>
+    <p class="lastupdate">09/13/2020 01:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.7&#176;F</td>
+        <td class="data">43.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">21%</td>
+        <td class="data">20%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.848 inHg (-0.065)</td>
+        <td class="data">29.849 inHg (-0.066)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph SSE (158&#176;)</td>
+        <td class="data">5 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.1&#176;F</td>
+        <td class="data">75.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,14 +153,14 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:45:32 PM">
-            89.9</span><br/>
+          <span title="01:52:32 PM">
+            90.0</span><br/>
           <span title="07:29:11 AM">
             48.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:45:32 PM (Sunday)">
-            89.9</span><br/>
+          <span title="01:52:32 PM (Sunday)">
+            90.0</span><br/>
           <span title="07:29:11 AM (Sunday)">
             48.7</span>
         </td>
@@ -187,12 +187,12 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:45:32 PM" class="hival">
-            89.9</span>
+          <span title="01:52:32 PM" class="hival">
+            90.0</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:45:32 PM (Sunday)" class="hival">
-            89.9</span>
+          <span title="01:52:32 PM (Sunday)" class="hival">
+            90.0</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/06/2020 04:04:42 PM" class="hival">
@@ -271,14 +271,14 @@
         <td class="data new_row hilo_day">
           <span title="07:09:59 AM">
             74</span><br/>
-          <span title="01:27:32 PM">
-            21</span>
+          <span title="01:53:10 PM">
+            19</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:09:59 AM (Sunday)">
             74</span><br/>
-          <span title="01:27:32 PM (Sunday)">
-            21</span>
+          <span title="01:53:10 PM (Sunday)">
+            19</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="09:49:01 AM">
             29.930</span><br/>
-          <span title="01:48:02 PM">
-            29.848</span>
+          <span title="01:50:02 PM">
+            29.846</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:49:01 AM (Sunday)">
             29.930</span><br/>
-          <span title="01:48:02 PM (Sunday)">
-            29.848</span>
+          <span title="01:50:02 PM (Sunday)">
+            29.846</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -375,14 +375,14 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="01:48:08 PM">
-            8</span><br/>
-          208
+          <span title="01:52:58 PM">
+            11</span><br/>
+          204
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:48:08 PM (Sunday)">
-            8</span><br/>
-          208
+          <span title="01:52:58 PM (Sunday)">
+            11</span><br/>
+          204
         </td>
         <td class="data new_row hilo_month">
           <span title="09/12/2020 04:18:20 PM">
@@ -440,15 +440,15 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          157
+          161
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          157
+          161
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          296
+          295
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,14 +470,14 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:41:02 PM">
-            75.1</span><br/>
+          <span title="01:52:02 PM">
+            75.2</span><br/>
           <span title="07:26:01 AM">
             71.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="01:41:02 PM (Sunday)">
-            75.1</span><br/>
+          <span title="01:52:02 PM (Sunday)">
+            75.2</span><br/>
           <span title="07:26:01 AM (Sunday)">
             71.6</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">11 days, 23 hours, 2 minutes</td>
+      <td class="data">11 days, 23 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">11 days, 23 hours, 2 minutes</td>
+      <td class="data">11 days, 23 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
